--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/drawer": "^5.3.4",
+    "@react-navigation/native": "^5.1.3",
+    "@react-navigation/stack": "^5.2.8",
     "i18n-js": "^3.5.1",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
@@ -21,8 +24,6 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.3.3",
-    "react-navigation-stack": "^2.3.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
