--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^5.3.4",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.8",
+    "formik": "^2.1.4",
     "i18n-js": "^3.5.1",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
@@ -25,7 +26,8 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
