--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
+    "styled-components": "^5.0.1",
     "yup": "^0.28.3"
   },
   "devDependencies": {
