--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/drawer": "^5.3.4",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.8",
+    "axios": "^0.19.2",
     "formik": "^2.1.4",
     "i18n-js": "^3.5.1",
+    "md5": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-native": "0.62.0",
