--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,6 +36,7 @@ allprojects {
 
         google()
         jcenter()
-        maven { url 'https://www.jitpack.io' }
+        maven { url "https://www.jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
 }
