--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-native": "0.62.0",
+    "react-native-camera": "^3.22.0",
     "react-native-elements": "^1.2.7",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-maps": "^0.27.1",
+    "react-native-permissions": "2.0.9",
+    "react-native-qrcode-scanner": "^1.4.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
