--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
-    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/drawer": "^5.3.4",
     "@react-navigation/native": "^5.1.3",
@@ -26,6 +25,7 @@
     "react-native-camera": "^3.22.0",
     "react-native-elements": "^1.2.7",
     "react-native-flash-message": "^0.1.15",
+    "react-native-geolocation-service": "^4.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-maps": "^0.27.1",
     "react-native-permissions": "2.0.9",
