--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,6 +25,7 @@ target 'uberQRcode' do
   # Pods for uberQRcode
   permissions_path = '../node_modules/react-native-permissions/ios'
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera.podspec"
+  pod 'react-native-geolocation', path: '../node_modules/@react-native-community/geolocation'
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
