--- a/ios/uberQRcode/Info.plist
+++ b/ios/uberQRcode/Info.plist
@@ -37,8 +37,6 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -55,6 +53,12 @@
 	<false/>
 	<key>NSCameraUsageDescription</key>
 	<string>Need your camera to send QRCode data</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Need your geolocation to navigate in maps</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Need your geolocation to navigate in maps</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Need your geolocation to navigate in maps</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
